--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ header {
 .first-half {
   color: white;
   margin-right: 105px;
+  margin-top: 60px;
 }
 .first-half a {
   text-decoration: none;
@@ -95,16 +96,28 @@ header {
   line-height: 80px;
 }
 /* --------------player section ----------------*/
+.player-section {
+  display: flex;
+  justify-content: center;
+  margin-top: 70px;
+  flex-direction: column;
+  align-items: center;
+}
 .copa-players {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 28px;
+  grid-column-gap: 30px;
+  margin-bottom: 150px;
 }
-.copa-players .player {
-  width: 330px;
-  height: 475px;
-  padding: 15px;
-  border: 2px solid black;
+.player {
+  width: 300px;
+  height: 440px;
+  padding: 15px 15px 33px 15px;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
 }
+
 .player-img img {
   width: 100%;
   height: 255px;
@@ -112,6 +125,7 @@ header {
 .player-details h3 {
   font-size: 28px;
   font-weight: 700;
+  margin-top: 16px;
 }
 .player-details p {
   font-weight: 400;
