--- a/style.css
+++ b/style.css
@@ -4,9 +4,11 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 body {
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 .container {
   width: 1160px;
@@ -34,6 +36,10 @@ header {
   background-color: #e02c6d;
   width: 125px;
   height: 45px;
+  transition: transform 150ms;
+}
+.navbar-login:hover {
+  transform: translateX(-10px);
 }
 .navbar-item .login-link {
   margin: 0 0 0 8px;
@@ -85,9 +91,13 @@ header {
   align-items: center;
   margin-left: 8px;
   margin-top: 27px;
+  transition: transform 250ms;
 }
 .watch-live-btn a {
   margin-right: 8px;
+}
+.watch-live-btn:hover {
+  transform: translateY(-10px);
 }
 .first-half h1 {
   font-size: 64px;
@@ -108,6 +118,7 @@ header {
   grid-template-columns: repeat(3, 1fr);
   grid-row-gap: 28px;
   grid-column-gap: 30px;
+  margin-bottom: 150px;
 }
 .player {
   width: 300px;
@@ -189,4 +200,60 @@ header {
   height: 32px;
   width: 32px;
   margin-right: 14px;
+}
+/*--------- media query --------------*/
+@media (max-width: 689px) {
+  .conmebol-section {
+    width: 100%;
+  }
+  .copa-players {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .highlights {
+    flex-direction: column;
+  }
+  .all-highlights {
+    flex-direction: column;
+    width: 90vw;
+    height: auto;
+    margin: auto;
+  }
+  .match-img img {
+    width: 90vw;
+    height: auto;
+  }
+  .copa-players {
+    margin-bottom: 60px;
+  }
+  .watch-live-btn {
+    margin-bottom: 30px;
+  }
+  .footer-logo img {
+    width: 90vw;
+    height: auto;
+  }
+  .main-footer {
+    margin-top: 20px;
+    margin: auto;
+  }
+  .conmebol-banner {
+    flex-direction: column;
+  }
+  .first-half {
+    width: 90vw;
+    margin: auto;
+    height: auto;
+  }
+  .conmebol-section {
+    height: auto;
+  }
+  .banner-img img {
+    width: 80vw;
+    height: auto;
+  }
+  .navbar {
+    width: 90vw;
+    margin: auto;
+    height: auto;
+  }
 }
