--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ header {
   justify-content: center;
   align-items: center;
   max-width: 1160px;
+  margin-bottom: 50px;
 }
 .all-highlights-part {
   width: 470px;
@@ -178,6 +179,38 @@ header {
 .match-img img {
   width: 568px;
   height: 428px;
+}
+/* --------------news & events--------------- */
+.news-events {
+  width: 1120px;
+}
+.news-events .news-heading {
+  font-size: 44px;
+  font-weight: 700;
+  color: #2d25a0;
+  border-bottom: 6px solid green;
+}
+.news {
+  display: flex;
+  margin-top: 20px;
+}
+.news-img {
+  margin-right: 20px;
+}
+.news-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.news-img img {
+  width: 180px;
+  height: 120px;
+}
+.news-info .news-author {
+  font-size: 16px;
+  font-weight: 600;
+  color: #2d25a0;
 }
 /* ---------------footer--------------------- */
 .main-footer {
